--- a/index.html
+++ b/index.html
@@ -156,16 +156,14 @@
 
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
-    <h2 class="section-title secondary border">Reach Out</h2>
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d886188.2396206228!2d-95.96171475238864!3d29.815995534578917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640b8b4488d8501%3A0xca0d02def365053b!2sHouston%2C%20TX!5e0!3m2!1sen!2sus!4v1618024658947!5m2!1sen!2sus" 
-      width="400" 
-      height="400" 
+      <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d886188.2396206228!2d-95.96171475238864!3d29.815995534578917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640b8b4488d8501%3A0xca0d02def365053b!2sHouston%2C%20TX!5e0!3m2!1sen!2sus!4v1618024658947!5m2!1sen!2sus"
       style="border:0;" 
       allowfullscreen="" 
       loading="lazy">
     </iframe> 
-    </div>
     <div>
       <h3>Run Buddy</h3>
       <p>
@@ -180,6 +178,7 @@
         P: 555.RUN.BUDZ (555.786.2839)<br/>
         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
       </address>
+      </div>  
     </div>
   </section>
 
